# TemplatePattern

./: CMakeLists.txt  Coffee.cpp  Coffee.h  DrinkTemplate.cpp  DrinkTemplate.h  README.md  Tea.cpp  Tea.h  main.cpp
